[gd_scene load_steps=5 format=3 uid="uid://dvehxsw6y0wua"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_w53he"]
[ext_resource type="Texture2D" uid="uid://gh44j4brs22u" path="res://assets/background.png" id="2_6b6x8"]

[sub_resource type="LabelSettings" id="LabelSettings_1ta4y"]
font_size = 19
font_color = Color(0.65218, 0.65218, 0.65218, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_x8auq"]
distance = -785.0

[node name="Game" type="Node2D"]
script = ExtResource("1_w53he")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(352, 352)
scale = Vector2(0.586667, 0.586667)
texture = ExtResource("2_6b6x8")

[node name="UI" type="Node" parent="."]

[node name="BouncinessSlider" type="HSlider" parent="UI"]
offset_left = 17.0
offset_top = 50.0
offset_right = 163.0
offset_bottom = 66.0
max_value = 1.0
step = 0.1

[node name="BouncinessLabel" type="Label" parent="UI"]
offset_left = 17.0
offset_top = 20.0
offset_right = 143.0
offset_bottom = 47.0
text = "Bounciness: 0"
label_settings = SubResource("LabelSettings_1ta4y")
horizontal_alignment = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Floor" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(352, -89)
shape = SubResource("WorldBoundaryShape2D_x8auq")

[node name="LeftWall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(786, 598)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_x8auq")

[node name="LeftWall2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-86, 604)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_x8auq")

[connection signal="value_changed" from="UI/BouncinessSlider" to="." method="_on_bounciness_slider_value_changed"]
